<resources>
    <string name="app_name">MifosXDroid</string>
    <string name="datatables">Datatables</string>
    <string name="login">Login</string>
    <string name="test_ip">10.0.2.2</string>
    <string name="search">Search</string>
    <string name="group_name">Group Name</string>
    <string name="staff_name">Staff Name</string>
    <string name="level_name">Level Name</string>
    <string name="offline">Offline Sync *</string>
    <string name="search_hint">Name or Account Number or External Id</string>
    <string name="search_results">Search Results</string>
    <string name="client_search">Client Search</string>
    <string name="total">Total</string>
    <string name="client_name">Client Name</string>
    <string name="client">Client</string>
    <string name="save">Save</string>
    <string name="due_date">Due Date</string>
    <string name="locale">Locale</string>
    <string name="confirm_delete_client_image">Are you sure you want to delete this client\'s image?</string>
    <string name="default_instance_url" translatable="false">demo.openmf.org</string>
    <string name="review_transaction">Review Transaction</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="payment_type">Payment Type</string>
    <string name="mifos_instance_domain">Mifos Instance Domain</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mifos" translatable="false">Mifos</string>
    <string name="full_name">Name</string>
    <string name="account_number">Account Number</string>
    <string name="external_id">External ID</string>
    <string name="loanproduct">Loan Product</string>
    <string name="loantype">Loan Type</string>
    <string name="principal">Principal</string>
    <string name="loanterm">Loan Term</string>
    <string name="loanterm_month">Select Loan Term</string>
    <string name="nominal">Nominal annual interest </string>
    <string name="submittedon">Submitted On</string>
    <string name="activation_date">Activation Date</string>
    <string name="office">Office</string>
    <string name="group">Group</string>
    <string name="cancel">Cancel</string>
    <string name="review_payment">Review Payment</string>
    <string name="survey">Survey</string>
    <string name="center_name">Center Name</string>
    <string name="center_id">Center Id</string>
    <string name="create_client">Create Client</string>
    <string name="create_savings_account">Add Savings Account</string>
    <string name="create_loan_account">Loan Application</string>
    <string name="create_loan_terms">Loan Terms</string>
    <string name="create_center">Create Center</string>
    <string name="create_group">Create Group</string>
    <string name="create_identifier">Create Identifier</string>
    <string name="staff_id">Staff Id</string>
    <string name="office_id">Office Id</string>
    <string name="id">ID</string>
    <string name="charge_id">Charge Id</string>
    <string name="transactions">Transactions</string>
    <string name="name">Name</string>
    <string name="charge_name">Charge Name</string>
    <string name="description">Description</string>
    <string name="file_name">File Name</string>
    <string name="file_location">Location</string>
    <string name="documents">Documents</string>
    <string name="no_document_to_show">There is No Documents to Show</string>
    <string name="no_identifier_to_show">There is No Identifier to Show</string>
    <string name="approve_savings">Approve Savings</string>
    <string name="activate_savings">Activate Savings</string>
    <string name="savings_account_closed">Savings Account Closed</string>
    <string name="savings_account_activated">Savings Account Activated</string>
    <string name="more_info">More client info</string>
    <string name="pinpoint">Pinpoint location</string>
    <string name="charges">Charges </string>
    <string name="add_loan">Add Loan Account</string>
    <string name="savings_account">Add Savings Account</string>
    <string name="savings_account_id">Savings Account Id</string>
    <string name="collection_sheet">Collection Sheet</string>
    <string name="title_activity_generate_collection_sheet" translatable="false">GenerateCollectionSheet</string>
    <string name="meeting_date">Meeting Date</string>
    <string name="center">Center</string>
    <string name="generate_collection_sheet">Generate Collection Sheet</string>
    <string name="clear_data">Clear Data</string>
    <string name="branch_id">Branch Id</string>
    <string name="clients">Clients</string>
    <string name="groups">Groups</string>
    <string name="centers">Centers</string>
    <string name="path_tracker">Path Tracker</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hide">Hide</string>
    <string name="colon">" : "</string>
    <string name="backspace_slash">\</string>
    <string name="slash">/</string>
    <string name="space">" "</string>
    <string name="new_line">\n</string>
    <string name="field">Field</string>
    <string name="value">Value</string>
    <string name="survey_subtitle">0/0</string>
    <string name="submit_survey">Submit Survey</string>
    <string name="question">Question</string>
    <string name="submitting_surveys">Submitting Survey</string>
    <string name="scorecard_created_successfully">Scorecard created successfully</string>
    <string name="survey_successfully_submitted">Survey Successfully Submitted !
        \n Thanks for taking Survey </string>
    <string name="please_attempt_atleast_one_question">Please Attempt AtLeast One Question </string>
    <string name="attempt_question">Attempt Questions : </string>
    <string name="empty_client_list">Empty ClientList</string>
    <string name="empty_group_clients">Empty Group ClientList</string>
    <string name="empty_groups_list">Empty GroupList</string>
    <string name="empty_center_list">Empty CenterList</string>
    <string name="savings_account_submitted_for_approval">The Savings Account has been submitted for
        Approval</string>
    <string name="package_name">Package Name</string>
    <string name="document_directory">/mifos/documents/</string>
    <string name="open_document">Open Document</string>
    <string name="document_remove_successfully">Document Removed Successfully</string>
    <string name="document_fetch_successfully">Document Fetch Successfully</string>
    <string name="update_document">Update Document</string>
    <string name="document_updated_successfully">%1$s Document Updated Successfully</string>
    <string name="document_dialog">"Document Dialog</string>
    <string name="document_type">Document Type</string>
    <string-array name="status">
        <item>Active</item>
        <item>InActive</item>
    </string-array>
    <string name="unique_id">Unique Id</string>
    <string name="identifier_created_successfully">Identifier Created Successfully</string>
    <string name="empty_identifier_document_type">Identifier Document Type id is Empty \n
        May be, Identifier Template is failed to fetch. Please Check your Internet
    Connection</string>
    <string name="unique_id_required">Unique Id is required!</string>
    <string name="update">Update</string>
    <string name="group_clients">Group Clients</string>
    <string name="identifier_deleted_successfully">Identifier deleted Successfully</string>
    <string name="exact_match">Exact Match</string>
    <string name="no_search_result_found">No results found for entered query</string>
    <string name="no_search_query_entered">No Search Query Entered!</string>
    <string name="active">Active</string>
    <string name="inactive">InActive</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="permission_denied_to_read_external_document">Permission Denied to Read
        External Document</string>
    <string name="permission_denied_to_write_external_document">Permission Denied to write
        Document in External Storage</string>
    <string name="loan_officer">Loan Officer</string>
    <string name="loan_purposes">Loan Purposes</string>
    <string name="loan_fund">Fund</string>
    <string name="staff">Staff</string>
    <string name="loan_cycle">Loan Cycle</string>
    <string name="loan_status">Status</string>
    <string name="loan_in_arrears">In Arrears</string>
    <string name="loan_id">Loan ID</string>
    <string name="loan_account_id">Account ID</string>
    <string name="loan_account_status_id">Account Status ID</string>
    <string name="loan_product_short_name">Product Short Name</string>
    <string name="loan_amount_disbursed">Amount Disbursed</string>
    <string name="loan_principal_due">Principal Due</string>
    <string name="loan_principal_paid">Principal Paid</string>
    <string name="loan_interest_due">Interest Due</string>
    <string name="loan_interest_paid">Interest Paid</string>
    <string name="loan_interest_type">Interest Type Method</string>
    <string name="loan_charges_due">Charges Due</string>
    <string name="loan_total_due">Total Due</string>
    <string name="summary">Summary</string>
    <string name="loan">Loan</string>
    <string name="amount_paid">Amt. Paid</string>
    <string name="balance">Balance</string>
    <string name="loan_principal">Principal</string>
    <string name="loan_interest">Interest</string>
    <string name="loan_fees">Fees</string>
    <string name="loan_penalty">Penalty</string>
    <string name="loan_amount_due">Amount Due</string>
    <string name="loan_repayment_date">Repayment Date</string>
    <string name="loan_transaction_date">Loan Transaction Date</string>
    <string name="additional_payment">Additional Payment</string>
    <string name="break_down">Break Down</string>
    <string name="loanAccounts">Loan Accounts</string>
    <string name="loanAccountSummary">Loan Account Summary</string>
    <string name="loanAccountSummaryStatus">Loan Account Summary</string>
    <string name="loan_repayment_schedule">Loan Repayment Schedule</string>
    <string name="loan_rejected_message">Loan was Rejected</string>
    <string name="repayment">Repayment</string>
    <string name="complete">Complete</string>
    <string name="pending">Pending</string>
    <string name="overdue">Overdue</string>
    <string name="process_loan_transaction">Process Loan Transaction</string>
    <string name="transaction_action_not_set">TRANSACTION ACTION NOT SET</string>
    <string name="review_transaction_details">Review Payment Details</string>
    <string name="process_transaction">Process Transaction</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_body">Transaction Body</string>
    <string name="transaction_failed">Transaction Failed</string>
    <string name="transaction_saved_in_db">Transaction Saved in DB</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="savings_account_balance">Account Balance</string>
    <string name="savings_total_deposits">Total Deposits</string>
    <string name="savings_total_withdrawals">Total Withdrawals</string>
    <string name="savings_make_withdrawal">Withdrawal</string>
    <string name="savings_make_deposit">Make Deposit</string>
    <string name="savingAccounts">Savings Accounts</string>
    <string name="savingsAccount">Savings Account</string>
    <string name="submit">Submit</string>
    <string name="meeting_start_date">Meeting Start Date</string>
    <string name="meeting_select_date">Select Date</string>
    <string name="meeting_repeat">Repeat</string>
    <string name="meeting_repeat_details">Repeat Details</string>
    <string name="meeting_repeat_type">Repeats</string>
    <string name="meeting_repeat_frequency">Repeats Every</string>
</resources>